fix smoothscroll & header overlap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,3 @@
- /* Author: Carlos Alvarez
- * URL: http://alvarez.is
- *
- * Project Name: Kelvin - Free Bootstrap 3 Resume Theme
- * Version: 1.0
- * URL: http://blacktie.co
- */
 .social-links:hover{
 	color: #ffffff !important;
 }
@@ -297,4 +290,8 @@ sm {
 
 .nav > li > a:focus {
     background-color: #9E9E9E;
+}
+
+.section-fix{
+	margin-top: 62px;
 }
